--- a/hello.html
+++ b/hello.html
@@ -11,13 +11,15 @@ p {
 </style>
 
 <title>awesomesauce</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 <h3>Hello <em>World</em>!</h3>
-<p>My name is Rachel.</p>
+<p>My name is Lauren.</p>
 <p>I like:</p>
 <ul>
   <li>Polka Dots</li>
   <li>Soccer</li>
   <li>Programming</li>
+    <ol>Test of OL</ol>
 </ul>
 
 <p id='intro' class='special'>
